--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -23,7 +23,7 @@ h2 {
 h4 {
   background-color: #888;
   color: white;
-  padding: 1em;
+  padding: 0.3em 1em 0em 1em;
 }
 p {
   line-height: 1.5em;
@@ -32,4 +32,13 @@ p.footer {
   font-weight:bold;
   font-size: 1em;
   color: #B43013
+}
+h4 i {
+  margin-right: 0.3em;
+}
+h4 a {
+  color: white;
+}
+h4 a:hover {
+  color: #B43013;
 }
