--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -43,6 +43,8 @@ h4 a:hover {
   color: #B43013;
 }
 code {
-  background-color: #ccc;
-  padding: 5px;
+  font-size: 85%;
+  background-color: rgba(0,0,0,0.04);
+  border-radius: 3px;
+  font-family: monospace;
 }
