--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -43,8 +43,8 @@ h4 a:hover {
   color: #B43013;
 }
 code {
-  font-size: 85%;
   background-color: rgba(0,0,0,0.04);
   border-radius: 3px;
   font-family: monospace;
+  padding: .3em .5em;
 }
