--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -24,6 +24,7 @@ h4 {
   background-color: #888;
   color: white;
   padding: 0.6em 1em 0.3em 1em;
+  text-align: center;
 }
 p {
   line-height: 1.5em;
